--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,8 @@ body {
   height: 100vh;
 
 }
+
+.App {
+  width: 100vw;
+  height: 100vh;
+}
